# okx-python-sdk

./: .gitignore  BUG_FIXES_REPORT.md  CLEANUP_SUMMARY.md  README.md  __init__.py  async_okxclient.py  async_rest.py  consts.py  example.py  exceptions.py  limiter.py  okxclient.py  pyproject.toml  rest_api.py  utils.py
async_api/: AsyncAccount.py  AsyncBlockTrading.py  AsyncConvert.py  AsyncCopyTrading.py  AsyncFDBroker.py  AsyncFinance.py  AsyncFunding.py  AsyncGrid.py  AsyncMarketData.py  AsyncPublicData.py  AsyncSpreadTrading.py  AsyncStatus.py  AsyncSubAccount.py  AsyncTrade.py  AsyncTradingData.py  __init__.py
examples/: basic_usage.py  trading_example.py
rest/: Account.py  BlockTrading.py  Convert.py  CopyTrading.py  FDBroker.py  Finance.py  Funding.py  Grid.py  MarketData.py  PublicData.py  SpreadTrading.py  Status.py  SubAccount.py  Trade.py  TradingData.py  __init__.py
ws/: base.py  factory.py  private.py  public.py  utils.py
